# uart-bridge

./: Dockerfile  README.md  example.env  pyproject.toml
src/: config.py  main.py  models.py  uart_manager.py  websocket_handler.py
